kubernetes/apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      priorityClassName: app-default
      containers:
        - name: navidrome
          image: deluan/navidrome:0.63.2
          ports:
            - name: http
              containerPort: 4533
          volumeMounts:
            - name: data
              mountPath: /data
            - name: music
              mountPath: /music
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: music
          persistentVolumeClaim:
            claimName: navidrome-library
