kubernetes/apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - name: http
      port: 4533
      targetPort: http
