kubernetes/apps/navidrome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: navidrome
spec:
  parentRefs:
    - name: internal
      namespace: cilium-gateway
  hostnames:
    - music.home.demivan.me
  rules:
    - backendRefs:
        - name: navidrome
          port: 4533
